# news-financial-market

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
market_news_app/: pyproject.toml
src/: main.py  sandbox.py
src/abstract/: base.py
src/webscrapping_modules/: yahoo_news.py
src/webscrapping_modules/yahoo_finance/: yahoo_news.py
tests/unit/: test_yahoo_finance.py
