[tool.poetry]
name = "news-financial-market"
version = "0.1.0"
description = ""
authors = ["bloczek"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
polygon-api-client = "^1.14.4"
python-dotenv = "^1.1.0"
eventregistry = "^9.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
tabulate = "^0.9.0"
pytest = "^7.4.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
