[tool.poetry]
name = "news-api-project"
version = "0.1.0"
description = ""
authors = ["Kuba <a5h3k14s15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
polygon-api-client = "^1.14.4"
python-dotenv = "^1.1.0"
eventregistry = "^9.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
